update promotion resource
